quick css fix for responsive title spacing

--- a/css/demo.css
+++ b/css/demo.css
@@ -401,11 +401,9 @@ li {
         width: 100%;
         margin-left: 0;
     }
-    #categories h2 {
-        padding-left: 70px;
-    }
+    #categories h2,
     #category-classes h2 {
-        padding-left: 50px;
+        padding-left: 70px;
     }
     .show-categories #categories {
         transform: translateX(0);
